--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "dependencies": {
     "@distube/ytdl-core": "^4.15.9",
     "assemblyai": "^4.8.0",
-    "fs": "^0.0.1-security",
+    "dotenv": "^16.4.7",
     "openai": "^4.80.1",
     "path": "^0.12.7",
-    "ytdl-core": "^4.11.5",
     "ytdl-mp3": "^5.2.0"
   },
   "name": "ytnode",
